fix: z-index of subtitle header

--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@
   width: 388px;
   font-size: 18px;
   line-height: 25px;
-  z-index: 1;
+  z-index: 2;
 }
 
 .header__mainillustration {
